--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -7,7 +7,7 @@
     <title>Coupard, Inc.</title>
     <link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
     <div class="background"></div>
