--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -5,9 +5,9 @@
     <meta name="description" content="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coupard, Inc.</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
