--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -14,11 +14,11 @@
   <body>
     <div class="background"></div>
     <article>
-      <header>
+      <header class='backdrop'>
         <h1>J<span class="kern-greater">.</span>COU<span class="kern-lesser">P</span><span class="kern-less">A</span>R<span class="kern-greater">D</span><span class="little">inc.</span></h1>
         <h2>Architectural and Construction Services</h2>
       </header>
-      <main>
+      <main class='backdrop'>
         <dl>
           <dt>CONTACT</dt>
             <dd><a href="tel:+12069099800">T: 206.909.9800</a></dd>
