--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -5,20 +5,17 @@
     <meta name="description" content="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coupard, Inc.</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
     <div class="background"></div>
     <article>
-      <header class='backdrop'>
+      <header>
         <h1>J<span class="kern-greater">.</span>COU<span class="kern-lesser">P</span><span class="kern-less">A</span>R<span class="kern-greater">D</span><span class="little">inc.</span></h1>
         <h2>Architectural and Construction Services</h2>
       </header>
-      <main class='backdrop'>
+      <main>
         <dl>
           <dt>CONTACT</dt>
             <dd><a href="tel:+12069099800">T: 206.909.9800</a></dd>
@@ -29,15 +26,11 @@
           <dd>WA General Contractor<br>No. JCOUPI*000DP</dd>
         </dl>
         <dl>
-          <dt>Office</dt>
+          <dt>Address</dt>
             <dd><address>409 NW 45th Street<br>Seattle, WA 98107</address></dd>
-          <dt>&nbsp;</dt>
-          <dt>Mail</dt>
-            <dd><address>300 Queen Anne Avenue N<br>Box 409<br>Seattle, WA 98019</address></dd>
         </dl>
       </main>
     </article>
-    <p class="subline right">Placemaking with Nature and Nurture</p>
-    <p class="subline left">Site Under Construction</p>
+    <p class="subline right">Placemaking</p>
   </body>
 </html>
