office change, add space

--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coupard, Inc.</title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css?v=2025070301">
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
@@ -24,9 +24,10 @@
           <dt>&nbsp;</dt>
           <dd>WA Architect No. 10976</dd>
           <dd>WA General Contractor<br>No. JCOUPI*000DP</dd>
+          <dt>&nbsp;</dt>
         </dl>
         <dl>
-          <dt>Address</dt>
+          <dt>Office</dt>
             <dd><address>409 NW 45th Street<br>Seattle, WA 98107</address></dd>
         </dl>
       </main>
