remove alignment space for narrow screens

--- a/jcoup/index.html
+++ b/jcoup/index.html
@@ -27,7 +27,7 @@
           <dt>&nbsp;</dt>
         </dl>
         <dl>
-          <dt>&nbsp;</dt>
+          <dt class='wide-only'>&nbsp;</dt>
             <dd><address>409 NW 45th Street<br>Seattle, WA 98107</address></dd>
         </dl>
       </main>
