increase button size

--- a/g/index.html
+++ b/g/index.html
@@ -42,10 +42,12 @@
       display: flex; /* show active group */
     }
     button {
-      margin: 5px;
-      padding: 10px 15px;
-      font-size: 16px;
+       padding: 12px 15px;
+	  font-size: 1rem;
+	  border-radius: 8px;
+	  border: 1px solid #ccc;
       cursor: pointer;
+	  flex: 1 1 30%;
       border-radius: 8px;
       border: 1px solid #ccc;
       background-color: #f0f0f0;
