--- a/g/index.html
+++ b/g/index.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cosmo's Intelegame</title>
   <style>
+  
 	.top-bar {
 	  position: sticky;
 	  top: 0;
       display: flex;
+	  width: 100%;
       flex-wrap: wrap;
 	  align-items: center;
-      justify-content: space-between;
-	  width: 100%;
+      justify-content: center;
 	  background: white;
 	  padding: 10px;
 	  z-index: 1000;
 	}
 	.left-select {
 	  flex: 0 0 auto;
-	
 	}
     body {
+	  position: fixed;
       font-family: sans-serif;
       text-align: center;
+	  width: 90%;
     }
 	.buttons-center {
 	  flex: 1; 
@@ -52,11 +55,19 @@
       border: 1px solid #ccc;
       background-color: #f0f0f0;
     }
+	
+	@media (max-width: 600px) {
+	  button {
+		flex: 1 1 100%;  
+		padding: 10px;
+	  }
+	}
 	select {
       padding: 10px 15px;
       font-size: 1rem;
       border-radius: 8px;
       border: 1px solid #ccc;
+	  margin: 5px;
 	}
     button:hover {
       background-color: #ddd;
