--- a/g/index.html
+++ b/g/index.html
@@ -22,7 +22,7 @@
 	  flex: 0 0 auto;
 	}
     body {
-	  position: fixed;
+	  position: absolute;
       font-family: sans-serif;
       text-align: center;
 	  width: 90%;
