--- a/g/index.html
+++ b/g/index.html
@@ -7,11 +7,8 @@
   <style>
   
 	.top-bar {
-	  position: fixed;
 	  top: 0;
-      display: flex;
 	  width: 100%;
-      flex-wrap: wrap;
 	  align-items: center;
       justify-content: center;
 	  background: white;
@@ -24,17 +21,12 @@
     body {
       font-family: sans-serif;
       text-align: center;
-	  width: 90%;
     }
 	.buttons-center {
-	  flex: 1; 
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-      flex-wrap: wrap;
+	
 	}
 	 .button-group {
-      display: none; /* hidden by default */
+      display: none; 
       flex-wrap: wrap;
       justify-content: center;
       gap: 8px;
