--- a/g/index.html
+++ b/g/index.html
@@ -5,35 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cosmo's Intelegame</title>
   <style>
-  
-	.top-bar {
-	  top: 0;
-	  width: 100%;
-	  align-items: center;
-      justify-content: center;
-	  background: white;
-	  padding: 10px;
-	  z-index: 1000;
-	}
-	.left-select {
-	  flex: 0 0 auto;
-	}
+  * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     body {
       font-family: sans-serif;
       text-align: center;
-    }
-	.buttons-center {
-	
-	}
-	 .button-group {
-      display: none; 
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 8px;
-      margin-top: 10px;
-    }
-    .button-group.active {
-      display: flex; /* show active group */
     }
     button {
        padding: 12px 15px;
@@ -66,11 +45,36 @@
     }
     img {
       margin-top: 20px;
-      #max-width: 500px;
+	  max-width: 100%;
       height: auto;
       border: 2px solid #ccc;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+	.top-bar {
+	  top: 0;
+	  width: 100%;
+	  align-items: center;
+      justify-content: center;
+	  background: white;
+	  padding: 10px;
+	  z-index: 1000;
+	}
+	.left-select {
+	  flex: 0 0 auto;
+	}
+	.buttons-center {
+	
+	}
+	 .button-group {
+      display: none; 
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 10px;
+    }
+    .button-group.active {
+      display: flex; /* show active group */
     }
   </style>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDX6MHHWKJ"></script>
