--- a/g/index.html
+++ b/g/index.html
@@ -97,11 +97,11 @@
 	</div>
 	<div class="buttons-center">
 		<div id="civo" class="button-group active">
-		  <button onclick="changeImage('images/civ_inv.jpg')">Inventions</button>
-		  <button onclick="changeImage('images/civ_mut.jpg')">Mutations</button>
-		  <button onclick="changeImage('images/civ_ins.jpg')">Insight</button>
-		  <button onclick="changeImage('images/civ_bld.jpg')">Buildings</button>
-		  <button onclick="changeImage('images/civ_ach.jpg')">Achivements</button>
+		  <button onclick="changeImage('images/civ_inv.jpg')">1 - Inventions</button>
+		  <button onclick="changeImage('images/civ_mut.jpg')">2 - Mutations</button>
+		  <button onclick="changeImage('images/civ_ins.jpg')">3 - Insight</button>
+		  <button onclick="changeImage('images/civ_bld.jpg')">4 - Buildings</button>
+		  <button onclick="changeImage('images/civ_ach.jpg')">5 - Achivements</button>
 		  <button onclick="changeImage('images/civ_wea.jpg')">Weather</button>
 		</div>
 
